# rs-pnm-shrink

./: Cargo.toml  README.md  build.sh  example.sh  opt.sh  rs-pnm-shrink.wasm  wasi.sh  watch.sh
src/: lib.rs  main.rs
