[package]
name = "rs-pnm-shrink"
version = "0.1.0"
edition = "2024"

exclude = [
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.image]
version = "0.25"
default-features = false
features = [
    "pnm",
]

[dependencies.clap]
version = "4"
features = ["derive"]
